# Pico-LLM-Viewer

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  claude-usage-daemon.sh  main.cpp
output/: pico-llm-viewer.uf2
src/adapters/claude/: claude_usage_json_parser.cpp  claude_usage_json_parser.hpp
src/adapters/pico_display/: pico_graphics_display.cpp  pico_graphics_display.hpp
src/adapters/serial/: serial_line_reader.cpp  serial_line_reader.hpp
src/display_usage/: display_out_port.hpp  display_usage_use_case.cpp  display_usage_use_case.hpp  usage_in_port.hpp
src/domain/: llm_usage.hpp
tests/: .clangd  CMakeLists.txt
tests/adapters/: usage_json_parser_test.cpp
tests/application/: display_usage_use_case_test.cpp
